# indexer

./: .Jenkinsfile  .aptly.conf  .codecov.yml  .gitignore  .gitmodules  .golangci-warnings.yml  .golangci.yml  .goreleaser.yaml  .markdownlint.yml  .travis.yml  .version  AGENTS.md  CODEOWNERS  Dockerfile  Dockerfile-release  Jenkinsfile  Makefile  README.md  accountreimpl.py  actual.base64  actual.json  block_sqlite_dump.py  blockarchiver.py  blockfetcher.py  buildtestdata.sh  codecov.yml  docker-compose.yml  e2etest.py  expected.base64  expected.json  go.mod  go.sum  i2qpstest.py  indexer2testload.py  mule.yaml  setup_indexer2.sql  stateproof.txn  tar_blockdir.py  test.json  test.txt  (+4 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
abi/: doc.go  encode.go  encode_test.go  json.go  json_test.go  type.go  type_test.go
accounting/: accountTranslation.go  accountTypeCache.go  (+8 more)
e2e_tests/: README.md  pyproject.toml
e2e_tests/docker/indexer/: Dockerfile  conduit.yml  docker-compose.yml
e2e_tests/docker/indexer-filtered/: docker-compose.yml
e2e_tests/docker/indexer-filtered/e2e-read/: Dockerfile
e2e_tests/docker/indexer-filtered/e2e-write/: Dockerfile  conduit.yml
e2e_tests/src/e2e_common/: get_test_data.py  util.py
e2e_tests/src/e2e_conduit/: e2econduit.py  runner.py  subslurp.py
e2e_tests/src/e2e_conduit/fixtures/: plugin_fixture.py
e2e_tests/src/e2e_conduit/fixtures/exporters/: __init__.py  postgresql.py
e2e_tests/src/e2e_conduit/fixtures/importers/: __init__.py  algod.py  follower_algod.py  importer_plugin.py  sync_algod.py
e2e_tests/src/e2e_conduit/fixtures/processors/: __init__.py  block_evaluator.py  filter.py
e2e_tests/src/e2e_conduit/scenarios/: __init__.py  filter_scenario.py  follower_indexer_scenario.py  indexer_scenario.py  sync_indexer_scenario.py
e2e_tests/src/e2e_indexer/: e2elive.py  validate_accounting.py
(+797 files in other folders)
