[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "indexer_e2e_tests"
description = "End to end tests for Algorand Indexer"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "boto3==1.24.71",
    "msgpack==1.0.4",
    "py-algorand-sdk==1.17.0",
    "pytest==6.2.5",
    "PyYAML==6.0.2",
    "setuptools ==70.0.0",
]


[project.scripts]
e2elive = "e2e_indexer.e2elive:main"
validate-accounting = "e2e_indexer.validate_accounting:main"
get-test-data = "e2e_common.get_test_data:main"
